--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 RNN/__MyLab__/EnglishToGerman/wmt14_translate_de-en_test.csv
 RNN/__MyLab__/EnglishToGerman/wmt14_translate_de-en_train.csv
+Learning/__MyLab__/EnglishToGerman/wmt14_translate_de-en_train.csv
