--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 RNN/__MyLab__/EnglishToGerman/wmt14_translate_de-en_test.csv
 RNN/__MyLab__/EnglishToGerman/wmt14_translate_de-en_train.csv
 Learning/__MyLab__/EnglishToGerman/wmt14_translate_de-en_train.csv
+Learning/Optimization_GAN/Paper_Proposal.txt
