--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ RNN/__MyLab__/EnglishToGerman/wmt14_translate_de-en_test.csv
 RNN/__MyLab__/EnglishToGerman/wmt14_translate_de-en_train.csv
 Learning/__MyLab__/EnglishToGerman/wmt14_translate_de-en_train.csv
 Learning/Optimization_GAN/Paper_Proposal.txt
+*.pdf
+*.mp4
