Steepest Ascent Hill Climbing with Replacement
Understanding of the displacement.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Learning/__MyLab__/EnglishToGerman/wmt14_translate_de-en_train.csv
 Learning/Optimization_GAN/Paper_Proposal.txt
 *.pdf
 *.mp4
+*.pdf
+Learning/Optimization/1. Essentials of Metaheuristics.pdf
